--- a/client/src/App.css
+++ b/client/src/App.css
@@ -136,12 +136,10 @@ margin-left: 100px;
   
 }
 
-#upcoming{
 
-}
 
 #category{
-  color: #313131;
+  color: #404040;
   font-size: 35px;
   border-bottom: 3px solid rgb(250, 20, 135);
 }
@@ -149,4 +147,183 @@ margin-left: 100px;
 #cards{
   margin-top: 30px;
   justify-content: center;
+}
+
+.ticket{
+  
+  margin-top: 50px;
+  margin-left: 50px;
+  max-width: 65%;
+  max-height: 350px;
+  border-radius: 5px;
+	display: flex;
+	background: rgb(180, 180, 180);
+	box-shadow: rgba(0, 0, 0.3, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.45) 0px 15px 12px;
+}
+.ticketcontent1{
+  border-left: 1px dashed #000000;
+  border-right: 1px dashed #000000;
+  display: flex;
+}
+.ticket .ticketimage img{
+  height: 290px;
+	width: 380px;
+  background-size: cover;
+}
+.ticket .ticketcontent1{
+  padding: 10px 20px;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	justify-content: space-between;
+	align-items: center;
+}
+.headerdates{
+  border-top: 1px solid rgb(73, 73, 73);
+	border-bottom: 1px solid rgb(60, 60, 60);
+	padding: 5px 0;
+	font-weight: 600;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.headerdates span:first-child {
+	text-align: left;
+	width: 100px;
+}
+
+.headerdates span:last-child {
+	text-align: right;
+	width: 100px;
+  
+}
+.headermonth {
+  color: #597898;
+	font-size: 20px;
+	width: 120px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.tickettime{
+  color: #404040;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	font-weight: 700;
+}
+.ticketcontent1 .ticketname h2{
+  font-size: 40px;
+  font-weight: 500;
+  font-weight: bolder;
+  color: #515151;
+}
+.tickettime span {
+	font-weight: 400;
+	color: gray;
+}
+.tickettime p{
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+.tagline {
+	font-weight: 700;
+	font-size: 16px;
+  color: rgb(145, 1, 1);
+  font-family: Arial, Helvetica, sans-serif;
+}
+.ticketlocation {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding-top: 8px;
+	border-top: 1px solid gray;
+	font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.ticketlocation span:first-child {
+	text-align: left;
+}
+.ticketlocation span:last-child {
+	text-align: right;
+}
+
+.ticketlocation .separator {
+	font-size: 20px;
+}
+.ticket .sidewords{
+  position: absolute;
+	color: darkgray;
+	height: 250px;
+	padding: 0 0px;
+	letter-spacing: 0.15em;
+	font-size: 12px;
+	display: flex;
+	text-align: center;
+	justify-content: space-around;
+	writing-mode: vertical-rl;
+	transform: rotate(-180deg);
+}
+.sidewords span:nth-child(2) {
+	color: white;
+	font-weight: 700;
+}
+.ticketname h2{
+	letter-spacing: 0.05em;
+	font-family: "Saira Stencil One", sans-serif;
+}
+
+.ticketcontent2{
+	width: 225px;
+	border-left: 1px dashed #404040;
+  
+}
+.ticketinfo2{
+  margin-top: 20px;
+  height: 250px;
+	padding: 10px 10px 10px 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.sidewords2{
+  color: rgb(131, 130, 130);
+  position: absolute;
+	height: 250px;
+	letter-spacing: 0.15em;
+	font-size: 12px;
+	display: flex;
+	text-align: center;
+	justify-content: space-around;
+	writing-mode: vertical-rl;
+	transform: rotate(-180deg);
+}
+.sidewords2 span:nth-child(2) {
+	color: #3a3a3a;
+}
+
+.ticketname2 h3{
+  font-size: 21px;
+	font-family: "Barlow", sans-serif;
+}
+
+.tickettime2{
+  margin-top: 10px;
+}
+.barcode{
+  width: 150px;
+}
+.barcode img {
+	height: 150px;
+  margin-top: 5px;
+}
+
+.ticket-button{
+  background-color: #8d7659;
+  color: rgba(25, 25, 25, 0.381);
+  font-weight: bolder;
 }
