--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,9 +119,10 @@ margin-left: 100px;
 }
 
 #navbar{
-  background-color: #000000;
+  background-color: #ffffff4b;
   border-radius: 8px;
   opacity: .8;
+  padding: 5px;
 }
 
 #events-span{
@@ -157,7 +158,7 @@ margin-left: 100px;
   max-height: 350px;
   border-radius: 5px;
 	display: flex;
-	background: rgba(255, 227, 227, 0.64);
+	background: rgba(190, 176, 176, 0.64);
 	box-shadow: rgba(0, 0, 0.3, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.45) 0px 15px 12px;
 }
 .ticketcontent1{
